--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -15,8 +15,8 @@
 
     <title>Catena Blockchain Development Suite</title>
 
-    <link href="static/base.css" rel="stylesheet">
-    <link href="static/style.css" rel="stylesheet">
+    <link href="static/css/base.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
     
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,600,700,800,900" rel="stylesheet">
     <script src="https://use.fontawesome.com/49e04167cc.js"></script>
