--- a/views/editor.njk
+++ b/views/editor.njk
@@ -10,7 +10,7 @@
   <script>
     (function() {
       var iframe = document.getElementById('remix').contentWindow;
-      iframe.web3 = new Web3(new Web3.providers.HttpProvider(window.location.origin + '/web3'));
+      iframe.web3 = new Web3(new Web3.providers.HttpProvider(`http://${window.location.hostname}:7545`));
     })();
   </script>
 {% endblock %}
